avformat/matroskadec: Don't unnecessarily reduce aspect ratio

Fixes ticket #9497.

Reviewed-by: James Almer <jamrial@gmail.com>
Signed-off-by: Andreas Rheinhardt <andreas.rheinhardt@outlook.com>
(cherry picked from commit 9139dc6140e8fb8d84760f3c567332b41858798d)